# AkashiSovet

./: .dockerignore  .gitignore  AGENTS.md  DEVELOPMENT.md  Dockerfile  PROJECT.MD  README.md  all.md  app.db  backup.sh  deploy.md  docker-compose.dev.yaml  docker-compose.yaml  env.example  implementation_plan.md  output_test.docx  package-lock.json  package.json  pyproject.toml  tailwind.config.js  test_docx.py  test_pdf.py  ~$tput_test.docx  Шаблон_для_вынесения_вопросов_на_Правление_ (1).docx
.cursor/rules/: git-workflow.mdc  mcps.mdc  (+1 more)
archive/: llm.py  superuser.py  user.py
bot/: bot.py  config.py  logger.py
graphify-out/: .graphify_root  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
migrations/: 001_settings.sql  002_meetings.sql  003_meetings_datetime.sql  004_attachments_s3_only.sql  005_meetings_scheduled_timestamptz.sql  006_allowed_telegram_users.sql  007_main_pdf_upload.sql  008_block_numbered_list_flag.sql  009_applications_indexes.sql
prometheus/: prometheus.yaml
scripts/: bake_docx_template.py  eval_sample.jsonl  load_pdf_stress.py  load_send_document_stress.py  run_langfuse_eval.py
stdlib/: __init__.py  access_middleware.py  cache.py  db.py  document.py  document_common.py  docx_gen.py  intent.py  keyboards.py  llm.py  models.py  pdf.py  redis_client.py  resources.py  s3.py  schemas.py  summary_format.py  telegram_summary.py  telegram_ui.py  template.py  test_pdf.py  text_normalize.py  timezone_util.py  timing.py
tests/: test_attachment_names.py
web/: auth_session.py  dependencies.py  main.py  realtime_ws.py  templating.py
(+69 files in other folders)
