[project]
name = "akashisovet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.27.0",
    "aiosqlite>=0.22.1",
    "jinja2>=3.1.6",
    "langchain>=1.2.15",
    "langchain-openai>=1.2.0",
    "langfuse>=4.5.0",
    "loguru>=0.7.3",
    "openai>=2.32.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.14.0",
    "reportlab>=4.4.10",
]
