[project]
name = "akashisovet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiobotocore>=2.25.0",
    "aiogram>=3.27.0",
    "aiosqlite>=0.22.1",
    "apscheduler>=3.11.2",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "jinja2>=3.1.6",
    "langchain>=1.2.15",
    "langchain-openai>=1.2.0",
    "langfuse>=4.5.0",
    "loguru>=0.7.3",
    "openai>=2.32.0",
    "passlib[bcrypt]>=1.7.4",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.14.0",
    "python-multipart>=0.0.27",
    "redis>=7.4.0",
    "reportlab>=4.4.10",
    "slowapi>=0.1.9",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
